--- a/style1.css
+++ b/style1.css
@@ -19,26 +19,26 @@ img{
     border-radius: 20px;
 }
 .element1{
-    width: 150px;
+    width:22%;
     display: inline-block;
-    padding-right: 170px;
-    padding-left: 150px;
+    padding-right: 2%;
+    padding-left: 2%;
 }
 .element2{
-    width: 150px;
+    width: 22%;
     display: inline-block;
-    padding-right: 170px;
+    padding-right: 2%;
     vertical-align: top;
 }
 .element3{
-    width: 150px;
+    width: 22%;
     display: inline-block;
-    padding-right: 170px;
+    padding-right: 2%;
     vertical-align: top;
 }
 .element4{
-    width: 150px;
+    width: 22%;
     display: inline-block;
-    padding-right: 200px;
+    padding-right: 2%;
     vertical-align: top;
 }
